fix border around headshot image on landing page and aligned content correctly in review section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ body {
     float: left;
     height: 200px;
     width: 200px;
-    border-radius: 999999;
+    border-radius: 50%;
 }
 
 .box {
